added projects endpoint & connected to mongo db
