# src/api/controllers/project.controller.js
@@ -1,0 +1,24 @@
+const ProjectService = require('../services/project.service');
+
+function getProject(req, res) {
+  new ProjectService(req, res).getProjectResponse();
+}
+
+function getProjects(req, res) {
+  new ProjectService(req, res).getProjectsResponse();
+}
+
+function postProject(req, res) {
+  new ProjectService(req, res).postProjectResponse();
+}
+
+function deleteProject(req, res) {
+  new ProjectService(req, res).deleteProjectResponse();
+}
+
+module.exports = {
+  getProject,
+  getProjects,
+  postProject,
+  deleteProject
+};
